update junit with jest

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "jest-junit": "^3.1.0",
     "next": "^4.0.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
@@ -17,5 +18,13 @@
     "jest": "21.2.1",
     "raf": "3.3.2",
     "react-test-renderer": "16.0.0"
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "output": "./junit.xml",
+    "classNameTemplate": "{classname}{title}",
+    "titleTemplate": "{classname}{title}",
+    "ancestorSeparator": " ",
+    "usePathForSuiteName": "false"
   }
 }
